--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
         "babel": "^6.23.0",
         "babel-core": "^6.26.3",
         "babel-jest": "^23.6.0",
+        "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
-        "babel-loader": "^7.1.2",
         "jest": "^23.6.0",
-        "react-dom": "^16.7.0-alpha.2"
+        "react-dom": "^16.7.0-alpha.2",
+        "react-test-renderer": "^16.6.3"
     },
     "dependencies": {
         "react": "^16.7.0-alpha.2",
