--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   },
   "homepage": "https://github.com/abharvey/styled-breakpoints#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.9.0",
     "emotion": "^9.2.12",
-    "jest": "^23.6.0",
+    "jest": "^24.9.0",
     "jest-emotion": "^9.2.11",
     "jest-styled-components": "^6.3.4",
     "react": "^16.12.0",
