--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
-    "presets": [
-        "env",
-        "react"
+  "presets": [
+    "@babel/preset-react",
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
     ]
+  ]
 }
