--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
-  "presets": [
-    "@babel/preset-react",
-    [
-      "@babel/preset-env",
-      {
-        "modules": false
-      }
+    "presets": [
+        "@babel/preset-react",
+        [
+            "@babel/preset-env",
+            {
+                "modules": "commonjs"
+            }
+        ]
     ]
-  ]
 }
