--- a/package.json
+++ b/package.json
@@ -48,12 +48,6 @@
         }
     ],
     "devDependencies": {
-        "@size-limit/preset-small-lib": "^7.0.5",
-        "husky": "^7.0.4",
-        "size-limit": "^7.0.5",
-        "tsdx": "^0.14.1",
-        "tslib": "^2.3.1",
-        "typescript": "^4.5.5",
         "@babel/cli": "^7.16.8",
         "@babel/core": "^7.16.7",
         "@babel/preset-env": "^7.16.8",
@@ -62,10 +56,17 @@
         "@emotion/jest": "^11.7.1",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
+        "@size-limit/preset-small-lib": "^7.0.5",
+        "@types/styled-components": "^5.1.21",
+        "husky": "^7.0.4",
         "jest-styled-components": "^7.0.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-test-renderer": "^17.0.2",
-        "styled-components": "^5.3.3"
+        "size-limit": "^7.0.5",
+        "styled-components": "^5.3.3",
+        "tsdx": "^0.14.1",
+        "tslib": "^2.3.1",
+        "typescript": "^4.5.5"
     }
 }
