--- a/package.json
+++ b/package.json
@@ -57,14 +57,19 @@
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
         "@size-limit/preset-small-lib": "^7.0.5",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.13",
+        "@types/react-test-renderer": "^17.0.1",
         "@types/styled-components": "^5.1.21",
         "husky": "^7.0.4",
+        "jest": "^27.4.7",
         "jest-styled-components": "^7.0.8",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-test-renderer": "^17.0.2",
         "size-limit": "^7.0.5",
         "styled-components": "^5.3.3",
+        "ts-jest": "^27.1.3",
         "tsdx": "^0.14.1",
         "tslib": "^2.3.1",
         "typescript": "^4.5.5"
