--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "size-limit": "^7.0.5",
         "styled-components": "^5.3.3",
         "ts-jest": "^27.1.3",
+        "ts-node": "^10.4.0",
         "tsdx": "^0.14.1",
         "tslib": "^2.3.1",
         "typescript": "^4.5.5"
