--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "include": ["src", "types"],
     "compilerOptions": {
+        "allowJs": true,
         "module": "esnext",
         "lib": ["dom", "esnext"],
+        "types": ["node", "jest"],
         "importHelpers": true,
         "declaration": true,
         "sourceMap": true,
