--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "noEmit": true
-    }
+    },
+    "exclude": ["**/*.test.*", "**/__mocks__/*", "**/__tests__/*"]
 }
